--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,15 @@
 [workspace]
 members = [
+    "hydro_benches",
     "benches",
 ]
 
 resolver = "2"
 
 [workspace.package]
-edition = "2024"
+edition = "2021"
 license = "Apache-2.0"
-repository = "https://github.com/hydro-project/hydro-benchmarks"
+repository = "https://github.com/hydro-project/hydro-deps"
 
 [workspace.lints.rust]
 impl_trait_overcaptures = "warn"
