--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -67,10 +67,12 @@ jobs:
           git -C "$WWW_DIR" config core.autocrlf input
           git -C "$WWW_DIR" config core.safecrlf false
           git -C "$WWW_DIR" checkout -b gh-pages
-          git -C "$WWW_DIR" fetch origin gh-pages
-          git -C "$WWW_DIR" reset --soft origin/gh-pages
-          git -C "$WWW_DIR" reset
-          git -C "$WWW_DIR" checkout -- bench criterion
+          if git ls-remote --exit-code --heads origin gh-pages > /dev/null 2>&1; then
+            git -C "$WWW_DIR" fetch origin gh-pages
+            git -C "$WWW_DIR" reset --soft origin/gh-pages
+            git -C "$WWW_DIR" reset
+            git -C "$WWW_DIR" checkout -- bench criterion 2>/dev/null || true
+          fi
           mkdir -p "$WWW_DIR/bench"
 
       - name: Run benchmark
@@ -110,9 +112,11 @@ jobs:
         shell: bash
         run: |
           cp -r .github/gh-pages/* .github/gh-pages/.gitignore "$WWW_DIR/"
-          git -C "$WWW_DIR" fetch origin gh-pages
-          git -C "$WWW_DIR" reset --soft origin/gh-pages
-          git -C "$WWW_DIR" reset
+          if git ls-remote --exit-code --heads origin gh-pages > /dev/null 2>&1; then
+            git -C "$WWW_DIR" fetch origin gh-pages
+            git -C "$WWW_DIR" reset --soft origin/gh-pages
+            git -C "$WWW_DIR" reset
+          fi
           git -C "$WWW_DIR" add bench criterion $(ls .github/gh-pages)
           if git -C "$WWW_DIR" -c 'user.name=github-actions[bot]' -c 'user.email=41898282+github-actions[bot]@users.noreply.github.com' \
             commit -m "Update Benchmarks $(date -I) $(git rev-parse HEAD)";
