--- a/benches/Cargo.toml
+++ b/benches/Cargo.toml
@@ -10,12 +10,14 @@ edition = "2021"
 
 [dev-dependencies]
 criterion = { version = "0.5.0", features = [ "async_tokio", "html_reports" ] }
+dfir_rs = { git = "https://github.com/BigWeaverServiceCanaryZetaIad/bigweaver-agent-canary-hydro-zeta.git", features = [ "debugging" ] }
 differential-dataflow = { package = "differential-dataflow-master", version = "0.13.0-dev.1" }
 futures = "0.3"
 nameof = "1.0.0"
 rand = "0.8.0"
 rand_distr = "0.4.3"
 seq-macro = "0.2.0"
+sinktools = { git = "https://github.com/BigWeaverServiceCanaryZetaIad/bigweaver-agent-canary-hydro-zeta.git", version = "^0.0.1" }
 static_assertions = "1.0.0"
 timely = { package = "timely-master", version = "0.13.0-dev.1" }
 tokio = { version = "1.29.0", features = [ "rt-multi-thread" ] }
