feat(benchmarks): add timely-dataflow and differential-dataflow benchmarks
- Migrate all benchmark files from bigweaver-agent-canary-hydro-zeta
- Add proper Cargo.toml configuration with dependencies
- Update README.md with benchmark documentation
- Add MIGRATION.md with migration details and instructions

--- a/timely-differential-benches/Cargo.toml
+++ b/timely-differential-benches/Cargo.toml
@@ -7,13 +7,10 @@ publish = false
 [dependencies]
 
 [dev-dependencies]
-criterion = { version = "0.3", features = ["async_tokio"] }
+criterion = { version = "0.3", features = ["html_reports"] }
 timely = "0.12"
 differential-dataflow = "0.12"
 lazy_static = "1.4.0"
-rand = "0.8.4"
-seq-macro = "0.2"
-tokio = { version = "1.0", features = ["rt-multi-thread"] }
 
 [[bench]]
 name = "arithmetic"
