feat: complete benchmark migration with path dependencies
- Added path dependencies to babyflow, hydroflow, and spinachflow from main repository
- Updated Cargo.toml to reference core packages via relative paths
- Updated README.md to document path dependencies and repository layout requirements
- Updated MIGRATION.md with detailed dependency configuration
- Updated timely-differential-benches/README.md with prerequisites
- Ensures performance comparison functionality is fully retained

--- a/timely-differential-benches/Cargo.toml
+++ b/timely-differential-benches/Cargo.toml
@@ -7,7 +7,10 @@ publish = false
 [dependencies]
 
 [dev-dependencies]
+babyflow = { path = "../../bigweaver-agent-canary-hydro-zeta/babyflow" }
 criterion = { version = "0.3", features = ["async_tokio"] }
+hydroflow = { path = "../../bigweaver-agent-canary-hydro-zeta/hydroflow" }
+spinachflow = { path = "../../bigweaver-agent-canary-hydro-zeta/spinachflow" }
 timely = "0.12"
 differential-dataflow = "0.12"
 lazy_static = "1.4.0"
