--- a/timely-differential-benches/Cargo.toml
+++ b/timely-differential-benches/Cargo.toml
@@ -7,12 +7,15 @@ publish = false
 [dependencies]
 
 [dev-dependencies]
+babyflow = { path = "../babyflow" }
 criterion = { version = "0.3", features = ["async_tokio"] }
-timely = "0.12"
 differential-dataflow = "0.12"
+hydroflow = { path = "../hydroflow" }
 lazy_static = "1.4.0"
 rand = "0.8.4"
 seq-macro = "0.2"
+spinachflow = { path = "../spinachflow" }
+timely = "0.12"
 tokio = { version = "1.0", features = ["rt-multi-thread"] }
 
 [[bench]]
