--- a/timely-differential-benches/Cargo.toml
+++ b/timely-differential-benches/Cargo.toml
@@ -7,13 +7,18 @@ publish = false
 [dependencies]
 
 [dev-dependencies]
-criterion = { version = "0.3", features = ["async_tokio"] }
-timely = "0.12"
-differential-dataflow = "0.12"
-lazy_static = "1.4.0"
-rand = "0.8.4"
-seq-macro = "0.2"
-tokio = { version = "1.0", features = ["rt-multi-thread"] }
+criterion = { version = "0.5.0", features = ["async_tokio", "html_reports"] }
+dfir_rs = { git = "https://github.com/hydro-project/hydro", features = ["debugging"] }
+differential-dataflow = { package = "differential-dataflow-master", version = "0.13.0-dev.1" }
+futures = "0.3"
+nameof = "1.0.0"
+rand = "0.8.0"
+rand_distr = "0.4.3"
+seq-macro = "0.2.0"
+sinktools = { git = "https://github.com/hydro-project/hydro" }
+static_assertions = "1.0.0"
+timely = { package = "timely-master", version = "0.13.0-dev.1" }
+tokio = { version = "1.29.0", features = ["rt-multi-thread"] }
 
 [[bench]]
 name = "arithmetic"
