--- a/timely-differential-benches/Cargo.toml
+++ b/timely-differential-benches/Cargo.toml
@@ -14,6 +14,7 @@ lazy_static = "1.4.0"
 rand = "0.8.4"
 seq-macro = "0.2"
 tokio = { version = "1.0", features = ["rt-multi-thread"] }
+babyflow = { path = "../../bigweaver-agent-canary-hydro-zeta", optional = true }
 
 [[bench]]
 name = "arithmetic"
