--- a/timely-differential-benches/Cargo.toml
+++ b/timely-differential-benches/Cargo.toml
@@ -7,6 +7,12 @@ publish = false
 [dependencies]
 
 [dev-dependencies]
+# Path dependencies for performance comparison with other dataflow implementations
+# Uncomment these when running cross-repository comparisons:
+# babyflow = { path = "../../bigweaver-agent-canary-hydro-zeta/babyflow" }
+# hydroflow = { path = "../../bigweaver-agent-canary-hydro-zeta/hydroflow" }
+# spinachflow = { path = "../../bigweaver-agent-canary-hydro-zeta/spinachflow" }
+
 criterion = { version = "0.3", features = ["async_tokio"] }
 timely = "0.12"
 differential-dataflow = "0.12"
