feat: add timely and differential-dataflow benchmarks from hydro-zeta repository

--- a/timely-differential-benches/Cargo.toml
+++ b/timely-differential-benches/Cargo.toml
@@ -50,3 +50,15 @@ harness = false
 [[bench]]
 name = "zip"
 harness = false
+
+[[bench]]
+name = "differential_count"
+harness = false
+
+[[bench]]
+name = "differential_distinct"
+harness = false
+
+[[bench]]
+name = "differential_join"
+harness = false
