docs: add commented path dependencies for cross-repository benchmarks
- Add commented babyflow, hydroflow, and spinachflow path dependencies
- These are required for benchmarks that compare different dataflow implementations
- Users can uncomment these when running cross-repository comparisons
- Aligns with instructions in README.md

--- a/timely-differential-benches/Cargo.toml
+++ b/timely-differential-benches/Cargo.toml
@@ -5,6 +5,16 @@ edition = "2021"
 publish = false
 
 [dependencies]
+# Path dependencies to the main repository (uncomment when running cross-repository benchmarks)
+# These dependencies are required for benchmarks that compare timely/differential implementations
+# with babyflow, hydroflow, and spinachflow implementations.
+# 
+# To enable these dependencies, uncomment the lines below and ensure the main repository
+# is cloned at ../../bigweaver-agent-canary-hydro-zeta:
+#
+# babyflow = { path = "../../bigweaver-agent-canary-hydro-zeta/babyflow" }
+# hydroflow = { path = "../../bigweaver-agent-canary-hydro-zeta/hydroflow" }
+# spinachflow = { path = "../../bigweaver-agent-canary-hydro-zeta/spinachflow" }
 
 [dev-dependencies]
 criterion = { version = "0.3", features = ["async_tokio"] }
