--- a/timely-differential-benches/Cargo.toml
+++ b/timely-differential-benches/Cargo.toml
@@ -15,6 +15,14 @@ rand = "0.8.4"
 seq-macro = "0.2"
 tokio = { version = "1.0", features = ["rt-multi-thread"] }
 
+# Uncomment these path dependencies if you have the main repository cloned side-by-side
+# and want to run benchmarks that compare different dataflow implementations.
+# The benchmarks will work with timely/differential-dataflow without these dependencies,
+# but some benchmark variants (babyflow, hydroflow, spinachflow) will be unavailable.
+# babyflow = { path = "../../bigweaver-agent-canary-hydro-zeta/babyflow" }
+# hydroflow = { path = "../../bigweaver-agent-canary-hydro-zeta/hydroflow" }
+# spinachflow = { path = "../../bigweaver-agent-canary-hydro-zeta/spinachflow" }
+
 [[bench]]
 name = "arithmetic"
 harness = false
