--- a/timely-differential-benches/Cargo.toml
+++ b/timely-differential-benches/Cargo.toml
@@ -7,6 +7,12 @@ publish = false
 [dependencies]
 
 [dev-dependencies]
+# Path dependencies for core dataflow implementations
+babyflow = { path = "../../bigweaver-agent-canary-hydro-zeta/babyflow" }
+hydroflow = { path = "../../bigweaver-agent-canary-hydro-zeta/hydroflow" }
+spinachflow = { path = "../../bigweaver-agent-canary-hydro-zeta/spinachflow" }
+
+# External dependencies
 criterion = { version = "0.3", features = ["async_tokio"] }
 timely = "0.12"
 differential-dataflow = "0.12"
