feat: configure path dependencies for cross-repository benchmarks
- Add path dependencies to babyflow, hydroflow, and spinachflow from main repository
- Update README with prerequisites and directory structure requirements
- Update MIGRATION.md with complete dependency information
- Document that both repositories must be cloned side-by-side
- Clarify that core implementations have no timely/differential dependencies

--- a/timely-differential-benches/Cargo.toml
+++ b/timely-differential-benches/Cargo.toml
@@ -15,6 +15,13 @@ rand = "0.8.4"
 seq-macro = "0.2"
 tokio = { version = "1.0", features = ["rt-multi-thread"] }
 
+# Path dependencies for performance comparison benchmarks
+# Uncomment these lines when running benchmarks that compare against these implementations
+# These should point to the bigweaver-agent-canary-hydro-zeta repository
+babyflow = { path = "../../bigweaver-agent-canary-hydro-zeta/babyflow" }
+hydroflow = { path = "../../bigweaver-agent-canary-hydro-zeta/hydroflow" }
+spinachflow = { path = "../../bigweaver-agent-canary-hydro-zeta/spinachflow" }
+
 [[bench]]
 name = "arithmetic"
 harness = false
