docs: add path dependency configuration for cross-repository benchmarks
- Add commented path dependencies for babyflow, hydroflow, and spinachflow
- Update README with setup instructions for cross-repository usage
- Explain requirement for both repositories to be cloned side-by-side
- Document how to uncomment path dependencies in Cargo.toml

--- a/timely-differential-benches/Cargo.toml
+++ b/timely-differential-benches/Cargo.toml
@@ -7,6 +7,12 @@ publish = false
 [dependencies]
 
 [dev-dependencies]
+# Path dependencies to core implementations from bigweaver-agent-canary-hydro-zeta
+# Uncomment these lines if you have both repositories cloned side-by-side:
+# babyflow = { path = "../../bigweaver-agent-canary-hydro-zeta/babyflow" }
+# hydroflow = { path = "../../bigweaver-agent-canary-hydro-zeta/hydroflow" }
+# spinachflow = { path = "../../bigweaver-agent-canary-hydro-zeta/spinachflow" }
+
 criterion = { version = "0.3", features = ["async_tokio"] }
 timely = "0.12"
 differential-dataflow = "0.12"
