--- a/timely-differential-benches/Cargo.toml
+++ b/timely-differential-benches/Cargo.toml
@@ -15,6 +15,13 @@ rand = "0.8.4"
 seq-macro = "0.2"
 tokio = { version = "1.0", features = ["rt-multi-thread"] }
 
+# Path dependencies for cross-repository benchmarking
+# Uncomment these when running benchmarks with bigweaver-agent-canary-hydro-zeta
+# cloned side-by-side with this repository
+babyflow = { path = "../../bigweaver-agent-canary-hydro-zeta/babyflow" }
+hydroflow = { path = "../../bigweaver-agent-canary-hydro-zeta/hydroflow" }
+spinachflow = { path = "../../bigweaver-agent-canary-hydro-zeta/spinachflow" }
+
 [[bench]]
 name = "arithmetic"
 harness = false
