docs: add path dependencies and improve benchmark documentation
- Add commented path dependencies to Cargo.toml for babyflow, hydroflow, and spinachflow
- Update README with clear prerequisites and setup instructions
- Clarify that path dependencies must be uncommented for cross-framework benchmarking
- Improve benchmark descriptions and usage examples

--- a/timely-differential-benches/Cargo.toml
+++ b/timely-differential-benches/Cargo.toml
@@ -15,6 +15,13 @@ rand = "0.8.4"
 seq-macro = "0.2"
 tokio = { version = "1.0", features = ["rt-multi-thread"] }
 
+# Uncomment these path dependencies to enable cross-framework benchmarking
+# These point to the core dataflow implementations in bigweaver-agent-canary-hydro-zeta
+# Ensure both repositories are cloned side-by-side
+# babyflow = { path = "../../bigweaver-agent-canary-hydro-zeta/babyflow" }
+# hydroflow = { path = "../../bigweaver-agent-canary-hydro-zeta/hydroflow" }
+# spinachflow = { path = "../../bigweaver-agent-canary-hydro-zeta/spinachflow" }
+
 [[bench]]
 name = "arithmetic"
 harness = false
